# serializer version: 1
# name: TestFind.test_find
  list([
    dict({
      'color': '#98A642',
      'count': 2,
      'description': 'First drug contain start almost wonder.',
      'id': 1,
      'name': 'Benefit',
    }),
    dict({
      'color': '#79FDF0',
      'count': 2,
      'description': 'Bed serious theory type.',
      'id': 2,
      'name': 'Ever',
    }),
  ])
# ---
# name: TestFind.test_find_by_name
  list([
    dict({
      'color': '#98A642',
      'count': 0,
      'description': 'First drug contain start almost wonder.',
      'id': 1,
      'name': 'Benefit',
    }),
  ])
# ---
# name: TestFind.test_find_by_name.1
  list([
  ])
# ---
# name: test_edit[None]
  dict({
    'color': '#98A642',
    'count': 2,
    'description': 'First drug contain start almost wonder.',
    'id': 1,
    'name': 'Summer',
  })
# ---
# name: test_get[200]
  dict({
    'color': '#98A642',
    'count': 2,
    'description': 'First drug contain start almost wonder.',
    'id': 1,
    'name': 'Benefit',
  })
# ---
# name: test_get[404]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: test_remove[204]
  None
# ---
# name: test_remove[404]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
